# trosc

./: .gitignore  README.md
src/belly/: CMakeLists.txt  package.xml
src/belly/launch/: test.launch
src/belly/opencl/: helbing.cl
src/belly/python/belly/: convert.py
src/belly/python/belly/features/: __init__.py  compute_costs.py
src/belly/python/belly/features/anisotropic/: compute_feature.py  compute_features.py
src/belly/python/belly/features/constant/: compute_feature.py  compute_features.py
src/belly/python/belly/features/helbing/: compute_feature.py  compute_features.py
src/belly/python/belly/features/icra14/: compute_feature.py  compute_features.py
src/belly/python/belly/features/icra14_default/: compute_feature.py  compute_features.py
src/belly/python/belly/features/kimlike/: compute_feature.py
src/belly/python/belly/features/kimlike_default/: compute_feature.py  compute_features.py
src/belly/python/belly/features/smoke0/: compute_feature.py  compute_features.py
src/belly/python/belly/opencl/: util.py
src/belly/python/belly/planning/: dijkstra.py  forward_backward.py
src/belly/sandbox/: helbing_opencl  test_opencl
src/belly/scripts/: irl_features.py
src/car1/: CMakeLists.txt  package.xml
src/car_navigation_msgs/: CMakeLists.txt  package.xml
src/e_motion_can_msgs/: CMakeLists.txt  package.xml
src/e_motion_perception_msgs/: CMakeLists.txt  package.xml
src/grid_navigation/: CMakeLists.txt  package.xml
src/kalman_prediction_msg/: CMakeLists.txt  package.xml
src/motion_prediction_python/: CMakeLists.txt  package.xml
(+48 files in other folders)
